--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "neighborhood-map",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://al-yasa.github.io/Neighborhood-Map-Udacity",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "google-maps-react": "^2.0.2",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
@@ -10,6 +12,8 @@
     "react-scripts": "2.1.8"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
